--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "google-genai>=1.21.1",
     "google-generativeai>=0.8.5",
+    "weaviate-client>=4.15.2",
 ]
